# bghinsights

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
bghinsights/: __init__.py  pdf_processor.py  store_data.py  text_analyzer.py
scripts/: test_azure_connection.ipynb  upload_json_to_meilisearch.ipynb
